# hal-assistant

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  export-florence-hal.yml
docs/: DATA_MODEL.md  NEW_CONVERSATION_KICKOFF.md  TEST_FIXTURES.md  WEB_APP_ARCHITECTURE.md  WEB_APP_HANDOFF.md  next-hal-submission-approval-2026-07-15.txt  phase-2-parser-design.md  production-run-2026-07-14.md  production-run-2026-07-15-approved-24.md  production-run-2026-07-15-paon.md
src/hal_assistant/: __init__.py  atomic_xml.py  audit_cli.py  build_cli.py  cli.py  conference_cli.py  conference_enrichment.py  deposit.py  diagnose_cli.py  enrichment.py  exporters.py  hal.py  hal_requirements.py  hal_xml.py  models.py  parser.py  production.py  production_cli.py  review_cli.py  review_import.py  submit_cli.py  sword.py  update.py  update_cli.py
tests/: test_aofr_serialization.py  test_cli_run.py  test_conference_enrichment.py  test_deposit.py  test_diagnose_cli.py  test_enrichment.py  test_exporters.py  test_hal.py  test_hal_requirements.py  test_hal_xml.py  test_le_paon_authority.py  test_parser.py  test_production.py  test_review_import.py  test_review_import_submission_safety.py  test_sword_headers.py  test_title_duplicate_override.py  test_update.py
